add JS for theme switching

--- a/src/login.html
+++ b/src/login.html
@@ -11,13 +11,14 @@
     <link rel="manifest" href="/app.webmanifest"/>
     <link rel="stylesheet" href="2023_float.css" type="text/css">
     <link rel="apple-touch-icon" sizes="180x180" href="public/icon.png">
+    <script src="form.js"></script>
     <style>
         body {
             text-align: center;
         }
     </style>
 </head>
-<body>
+<body id="body" onload="themeHandle()">
     <div class="container">
         <div class="dummy">
             <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP℠</span></h1>
