--- a/src/submitted.html
+++ b/src/submitted.html
@@ -12,13 +12,14 @@
     <link rel="manifest" href="/app.webmanifest"/>
     <meta name="mobile-web-app-capable" content="yes">
     <title>Form Submitted - 766 Scouting</title>
+    <script src="form.js"></script>
     <style>
         body {
             vertical-align: middle;
         }
     </style>
 </head>
-    <body>
+    <body id="body" onload="themeHandle()">
         <h1 style="color: #FFB600">Submitted!</h1>
         <h3 style="text-align: center;" class="gameflair1">Redirecting...</h3>
     </body>
