--- a/src/pit.html
+++ b/src/pit.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
-    <link rel="stylesheet" href="2023_float.css" type="text/css">
+    <link rel="stylesheet" href="2023_float.min.css" type="text/css">
     <title>Pit Scouting - 766 Scouting</title>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="apple-touch-startup-image" href="public/launch.png">
@@ -12,7 +12,7 @@
     <meta name="apple-mobile-web-app-title" content="Scouting">
     <link rel="manifest" href="/app.webmanifest"/>
     <meta name="mobile-web-app-capable" content="yes">
-    <script src="form.js"></script>
+    <script src="form.min.js"></script>
 </head>
 
 <body id="body" onload="themeHandle()">
