--- a/src/settings.html
+++ b/src/settings.html
@@ -9,9 +9,9 @@
     <meta name="apple-mobile-web-app-title" content="Scouting">
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="manifest" href="/app.webmanifest"/>
-    <link rel="stylesheet" href="2023_float.css" type="text/css">
+    <link rel="stylesheet" href="2023_float.min.css" type="text/css">
     <link rel="apple-touch-icon" sizes="180x180" href="public/icon.png">
-    <script src="form.js"></script>
+    <script src="form.min.js"></script>
     <style>
         body {
             text-align: center;
