add back button

--- a/src/settings.html
+++ b/src/settings.html
@@ -34,6 +34,9 @@
             </button><br><br>
             <button style="background-color: rgba(0,0,0,0); border: 2px solid #f00; color: #f00; border-radius: 10px; padding: 5px; font-weight: 700; width: 75%;" onclick="window.location.href='logout'">
                 <p>Log Out</p>
+            </button><br><br>
+            <button style="background-color: rgba(0,0,0,0); border: 2px solid gray; color: gray; border-radius: 10px; padding: 5px; font-weight: 700; width: 75%;" onclick="window.location.href='/'">
+                <p>Back</p>
             </button>
         </div>
     </div>
