--- a/src/settings.html
+++ b/src/settings.html
@@ -2,15 +2,19 @@
 <html lang="en">
 <head>
     <title>Settings - 766 Scouting</title>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Scouting">
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="manifest" href="/app.webmanifest"/>
+    <meta name="theme-color" content="#121212" id="themeMeta">
     <link rel="stylesheet" href="2023_float.min.css" type="text/css">
-    <link rel="apple-touch-icon" sizes="180x180" href="public/icon.png">
+    <link rel="manifest" href="/app.webmanifest"/>
+    <link rel="apple-touch-startup-image" href="public/launch.png">
     <script src="form.min.js"></script>
     <style>
         body {
