--- a/src/denied.html
+++ b/src/denied.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <title>Access Denied - 766 Scouting</title>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
-    <link rel="stylesheet" href="2023_float.min.css" type="text/css">
-    <meta http-equiv="refresh" content="2;/" />
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <link rel="apple-touch-startup-image" href="public/launch.png">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Scouting">
-    <link rel="manifest" href="/app.webmanifest"/>
     <meta name="mobile-web-app-capable" content="yes">
-    <title>Access Denied - 766 Scouting</title>
+    <meta name="theme-color" content="#121212" id="themeMeta">
+    <link rel="stylesheet" href="2023_float.min.css" type="text/css">
+    <link rel="manifest" href="/app.webmanifest"/>
+    <link rel="apple-touch-startup-image" href="public/launch.png">
     <style>
         body {
             vertical-align: middle;
