fix method of theme switching

--- a/src/main.html
+++ b/src/main.html
@@ -19,7 +19,7 @@
     <script src="form.min.js"></script>
 </head>
 
-<body onload="themeHandle()" class="light-mode" id="body">
+<body onload="themeHandle()" id="body">
     <form action="/submit" target="_self" method="POST" name="mainForm" id="mainFormHTML">
         <input type="text" value="main" name="formType" hidden>
         <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP℠</span></h1><br>
