--- a/src/settings.html
+++ b/src/settings.html
@@ -57,8 +57,17 @@
                 });
             }
         }
+        function getThemeCookieS() {
+            var allcookies = document.cookie.split(';');
+            for (var i = 0; i < allcookies.length; i++) {
+                var cookie = allcookies[i].trim();
+                if ((cookie.indexOf(name)) == 0 && (cookie.substr(name.length)).includes("4c454a5b1bedf6a1")) {
+                    return cookie.substr(name.length).split('=')[1]
+                }
+            }
+        }
         function changeTheme() {
-            let theme = getThemeCookie();
+            let theme = getThemeCookieS();
             switch (theme) {
                 case "light":
                     document.cookie = "4c454a5b1bedf6a1=dark; expires=Fri, 31 Dec 9999 23:59:59 GMT";
