fixed dark/light mode

--- a/src/denied.html
+++ b/src/denied.html
@@ -21,7 +21,7 @@
         }
     </style>
 </head>
-    <body>
+    <body class="dark-mode">
         <h1 style="color: #FF0000">Access Denied!</h1>
         <h3 style="text-align: center;" class="gameflair1">You do not seem to be part of the Team 766 discord server<br>Alternatively, you do not have permission to access the requested resource!</h3>
     </body>
