--- a/src/submitted.html
+++ b/src/submitted.html
@@ -22,7 +22,7 @@
         }
     </style>
 </head>
-    <body id="body" onload="themeHandle()">
+    <body id="body" class="dark-mode" onload="themeHandle()">
         <h1 style="color: #FFB600">Submitted!</h1>
         <h3 style="text-align: center;" class="gameflair1">Redirecting...</h3>
     </body>
