change css and bold prompt

--- a/src/main.html
+++ b/src/main.html
@@ -13,7 +13,7 @@
     <meta name="apple-mobile-web-app-title" content="Scouting">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#121212" id="themeMeta">
-    <link rel="stylesheet" href="2023_float.min.css" type="text/css">
+    <link rel="stylesheet" href="2023_float.css" type="text/css">
     <link rel="manifest" href="/app.webmanifest"/>
     <link rel="apple-touch-startup-image" href="public/launch.png">
     <script src="form.min.js"></script>
@@ -54,8 +54,8 @@
         </fieldset><br>
         <h2 class="gameflair1">Match Scouting</h2>
         <fieldset>
-            <label>During AUTO, the robot...<br></label>
-            <br>
+            <label><strong>During AUTO, the robot...</strong><br></label>
+            <br><br>
             <input value="true" type="checkbox" name="game1" class="checkbig"><span>&emsp;Completely left COMMUNITY (taxied)<br></span><br>
             <input value="true" type="checkbox" name="game2" class="checkbig"><span>&emsp;Scored on a bottom ROW<br></span><br>
             <input value="true" type="checkbox" name="game3" class="checkbig"><span>&emsp;Scored on a middle ROW<br></span><br>
@@ -65,8 +65,8 @@
             <input value="12" type="radio" name="game5" class="checkbig"><span>&emsp;Was DOCKED and ENGAGED<br></span><br>
         </fieldset>
         <fieldset>
-            <label>During TELEOP, the robot...<br></label>
-            <br>
+            <label><strong>During TELEOP, the robot...</strong><br></label>
+            <br><br>
             <input value="true" type="checkbox" name="game6" class="checkbig"><span>&emsp;Scored on a bottom ROW<br></span><br>
             <input value="true" type="checkbox" name="game7" class="checkbig"><span>&emsp;Scored on a middle ROW<br></span><br>
             <input value="true" type="checkbox" name="game8" class="checkbig"><span>&emsp;Scored on a top ROW<br></span><br>
