--- a/src/pit.html
+++ b/src/pit.html
@@ -19,7 +19,8 @@
     <script src="form.min.js"></script>
 </head>
 
-<body id="body" class="dark-mode" onload="themeHandle()">
+<body id="body" class="dark-mode">
+    <script>themeHandle()</script>
     <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP℠</span></h1><br>
             <form action="/submitPit" target="_self" method="POST" enctype="multipart/form-data">
                 <input type="text" value="pit" name="formType" hidden>
