--- a/src/settings.html
+++ b/src/settings.html
@@ -22,7 +22,8 @@
         }
     </style>
 </head>
-<body id="body" class="dark-mode" onload="themeHandle()">
+<body id="body" class="dark-mode">
+    <script>themeHandle()</script>
     <div class="container">
         <div class="dummy">
             <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP℠</span></h1>
