--- a/src/main.html
+++ b/src/main.html
@@ -17,6 +17,37 @@
     <link rel="manifest" href="/app.webmanifest"/>
     <link rel="apple-touch-startup-image" href="public/launch.png">
     <script src="form.min.js"></script>
+    <style>
+        .sg {
+            grid-column-gap: 10px;
+            grid-row-gap: 10px;
+            aspect-ratio: 3/1;
+            -webkit-column-gap: 10px;
+            column-gap: 10px;
+            display: grid;
+            grid-template-columns: repeat(9, 1fr);
+            grid-template-rows: repeat(3, 1fr);
+            row-gap: 10px;
+            width:100%
+        }
+
+        .sg-c {
+            aspect-ratio: 1/1;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 2rem;
+            margin: 2px;
+            padding: 2px;
+            text-align: center;
+            width:100%;
+            background-color: #ddd;
+            color: #a216a2
+        }
+
+        .sg-c[data-coop=true] {
+            background-color: #bbb;
+        }
+    </style>
 </head>
 
 <body class="dark-mode" id="body">
@@ -54,32 +85,66 @@
             </select>
         </fieldset><br>
         <h2 class="gameflair1">Match Scouting</h2>
+        <p id="landscapeReminder" style="display: none; color: red;">Consider turning your device for the grid</p>
+        <p>Select only grid squares that the robot you are scouting fills</p>
         <fieldset>
-            <label><strong>During AUTO, the robot...</strong><br></label>
-            <br><br>
-            <input value="true" type="checkbox" name="game1" class="checkbig"><span>&emsp;Completely left COMMUNITY (taxied)<br></span><br>
+            <!--INPUT TO SET FOR GRID DATA-->
+            <input value="000000000000000000000000000" type="number" name="game12" id="griddata" hidden>
+            <div class="sg">
+                <div class="sg-c" data-coop="false" data-num="0" id="sgc_1_1" data-state="0"></div>
+                <div class="sg-c" data-coop="false" data-num="1" id="sgc_1_2" data-state="0"></div>
+                <div class="sg-c" data-coop="false" data-num="2" id="sgc_1_3" data-state="0"></div>
+                <div class="sg-c" data-coop="true" data-num="3" id="sgc_1_4" data-state="0"></div>
+                <div class="sg-c" data-coop="true" data-num="4" id="sgc_1_5" data-state="0"></div>
+                <div class="sg-c" data-coop="true" data-num="5" id="sgc_1_6" data-state="0"></div>
+                <div class="sg-c" data-coop="false" data-num="6" id="sgc_1_7" data-state="0"></div>
+                <div class="sg-c" data-coop="false" data-num="7" id="sgc_1_8" data-state="0"></div>
+                <div class="sg-c" data-coop="false" data-num="8" id="sgc_1_9" data-state="0"></div>
+
+                <div class="sg-c" data-coop="false" data-num="9" id="sgc_2_1" data-state="0"></div>
+                <div class="sg-c" data-coop="false" data-num="10" id="sgc_2_2" data-state="0"></div>
+                <div class="sg-c" data-coop="false" data-num="11" id="sgc_2_3" data-state="0"></div>
+                <div class="sg-c" data-coop="true" data-num="12" id="sgc_2_4" data-state="0"></div>
+                <div class="sg-c" data-coop="true" data-num="13" id="sgc_2_5" data-state="0"></div>
+                <div class="sg-c" data-coop="true" data-num="14" id="sgc_2_6" data-state="0"></div>
+                <div class="sg-c" data-coop="false" data-num="15" id="sgc_2_7" data-state="0"></div>
+                <div class="sg-c" data-coop="false" data-num="16" id="sgc_2_8" data-state="0"></div>
+                <div class="sg-c" data-coop="false" data-num="17" id="sgc_2_9" data-state="0"></div>
+
+                <div class="sg-c" data-coop="false" data-num="18" id="sgc_3_1" data-state="0"></div>
+                <div class="sg-c" data-coop="false" data-num="19" id="sgc_3_2" data-state="0"></div>
+                <div class="sg-c" data-coop="false" data-num="20" id="sgc_3_3" data-state="0"></div>
+                <div class="sg-c" data-coop="true" data-num="21" id="sgc_3_4" data-state="0"></div>
+                <div class="sg-c" data-coop="true" data-num="22" id="sgc_3_5" data-state="0"></div>
+                <div class="sg-c" data-coop="true" data-num="23" id="sgc_3_6" data-state="0"></div>
+                <div class="sg-c" data-coop="false" data-num="24" id="sgc_3_7" data-state="0"></div>
+                <div class="sg-c" data-coop="false" data-num="25" id="sgc_3_8" data-state="0"></div>
+                <div class="sg-c" data-coop="false" data-num="26" id="sgc_3_9" data-state="0"></div>
+            </div>
+        </fieldset>
+        <br><label><strong id="vstrong">During AUTO, the robot...</strong></label>
+        <fieldset><br>
+            <input value="true" type="checkbox" name="game1" class="checkbig"><span>&emsp;Completely left COMMUNITY<br></span><br>
             <input value="true" type="checkbox" name="game2" class="checkbig"><span>&emsp;Scored on a bottom ROW<br></span><br>
             <input value="true" type="checkbox" name="game3" class="checkbig"><span>&emsp;Scored on a middle ROW<br></span><br>
             <input value="true" type="checkbox" name="game4" class="checkbig"><span>&emsp;Scored on a top ROW<br></span><br>
-            <input value="0" type="radio" name="game5" class="checkbig" checked="checked"><span>&emsp;Was not DOCKED or ENGAGED<br></span><br>
-            <input value="8" type="radio" name="game5" class="checkbig"><span>&emsp;Was DOCKED, not ENGAGED<br></span><br>
-            <input value="12" type="radio" name="game5" class="checkbig"><span>&emsp;Was DOCKED and ENGAGED<br></span><br>
+            <input value="0" type="radio" name="game5" class="checkbig" checked="checked"><span>&emsp;Not DOCKED or ENGAGED<br></span><br>
+            <input value="8" type="radio" name="game5" class="checkbig"><span>&emsp;DOCKED, not ENGAGED<br></span><br>
+            <input value="12" type="radio" name="game5" class="checkbig"><span>&emsp;DOCKED and ENGAGED<br></span><br>
         </fieldset>
-        <fieldset>
-            <label><strong>During TELEOP, the robot...</strong><br></label>
-            <br><br>
+        <br><label><strong id="vstrong">During TELEOP, the robot...</strong></label>
+        <fieldset><br>
             <input value="true" type="checkbox" name="game6" class="checkbig"><span>&emsp;Scored on a bottom ROW<br></span><br>
             <input value="true" type="checkbox" name="game7" class="checkbig"><span>&emsp;Scored on a middle ROW<br></span><br>
             <input value="true" type="checkbox" name="game8" class="checkbig"><span>&emsp;Scored on a top ROW<br></span><br>
-            <input value="true" type="checkbox" name="game9" class="checkbig"><span>&emsp;Alliance - COOPERTITION BONUS<br></span><br>
-            <input value="0" type="radio" name="game10" class="checkbig" checked="checked"><span>&emsp;Was not DOCKED or ENGAGED<br></span><br>
-            <input value="2" type="radio" name="game10" class="checkbig"><span>&emsp;Was PARKED (in COMMUNITY)<br></span><br>
-            <input value="6" type="radio" name="game10" class="checkbig"><span>&emsp;Was DOCKED and not ENGAGED<br></span><br>
-            <input value="10" type="radio" name="game10" class="checkbig"><span>&emsp;Was DOCKED and ENGAGED<br></span><br>
+            <input value="true" type="checkbox" name="game9" class="checkbig"><span>&emsp;COOPERTITION bonus<br></span><br>
+            <input value="0" type="radio" name="game10" class="checkbig" checked="checked"><span>&emsp;Not DOCKED or ENGAGED<br></span><br>
+            <input value="2" type="radio" name="game10" class="checkbig"><span>&emsp;PARKED (in COMMUNITY)<br></span><br>
+            <input value="6" type="radio" name="game10" class="checkbig"><span>&emsp;DOCKED and not ENGAGED<br></span><br>
+            <input value="10" type="radio" name="game10" class="checkbig"><span>&emsp;DOCKED and ENGAGED<br></span><br>
         </fieldset>
-        
+
         <!--extra fields to use-->
-        <input value="0" type="number" name="game12" hidden>
         <input value="0" type="number" name="game13" hidden>
         <input value="0" type="number" name="game14" hidden>
         <input value="0" type="number" name="game15" hidden>
@@ -93,7 +158,7 @@
         <input value="0" type="number" name="game23" hidden>
         <input value="0" type="number" name="game24" hidden>
         <input value="0" type="number" name="game25" hidden>
-        
+
         <br>
         <h2 class="gameflair1">Post Game</h2>
         <fieldset>
@@ -127,6 +192,57 @@
     <input type="file" name="jsonScoutFile" accept=".scout" style="display: none;" id="jsonScoutFile" disabled="disabled">
     <br><br>
     <script>
+        if(window.innerHeight > window.innerWidth){
+            document.getElementById('landscapeReminder').style.display = "inline";
+        }
+        window.addEventListener('resize', function(event){
+            if(window.innerHeight > window.innerWidth){
+                document.getElementById('landscapeReminder').style.display = "inline";
+            } else {
+                document.getElementById('landscapeReminder').style.display = "none";
+            }
+        });
+        function getAllCells() {
+            var cells = [];
+            for(let j = 1; j < 4; j++) {
+                for(let i = 1; i < 10; i++) {
+                    cells.push(document.getElementById('sgc_' + j + '_' + i))
+                }
+            }
+            return cells;
+        }
+        var sgCellStatus = [
+            0, 0, 0,  0, 0, 0,  0, 0, 0,
+            0, 0, 0,  0, 0, 0,  0, 0, 0,
+            0, 0, 0,  0, 0, 0,  0, 0, 0
+        ];
+        const allCells = getAllCells();
+        function processCellClick(dataNum, numset) {
+            sgCellStatus[Number(dataNum)] = numset;
+            document.getElementById('griddata').value = sgCellStatus.join('');
+            console.log(document.getElementById('griddata').value);
+        }
+        for (var i = 0; i < allCells.length; i += 1) {
+            allCells[i].addEventListener('click', function (e) {
+                if (this.getAttribute("data-state") == "0") {
+                    this.style.background = "#a216a2";
+                    this.setAttribute("data-state", "1")
+                    processCellClick(this.getAttribute("data-num"), 1);
+                } else if (this.getAttribute("data-state") == "1") {
+                    this.style.background = "#ff0";
+                    this.setAttribute("data-state", "2")
+                    processCellClick(this.getAttribute("data-num"), 2);
+                } else if (this.getAttribute("data-state") == "2") {
+                    if (this.getAttribute("data-coop") == "true") {
+                        this.style.background = "#bbb";
+                    } else {
+                        this.style.background = "#ddd";
+                    }
+                    this.setAttribute("data-state", "0")
+                    processCellClick(this.getAttribute("data-num"), 0);
+                }
+            });
+        }
         const inputItems = document.getElementsByTagName('input');
         for(var i = 0; i < inputItems.length; i++) {
             inputItems[i].addEventListener('change', (event) => {resetExportButton()});
