--- a/src/submitted.html
+++ b/src/submitted.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="2023_float.min.css" type="text/css">
     <link rel="manifest" href="/app.webmanifest"/>
     <link rel="apple-touch-startup-image" href="public/launch.png">
+    <meta http-equiv="refresh" content="3;url=/"/>
     <script src="form.min.js"></script>
     <title>Form Submitted - 766 Scouting</title>
     <style>
