--- a/src/offline.html
+++ b/src/offline.html
@@ -122,6 +122,7 @@
         <p style="text-align:center">
             <button type="button" id="downloadFormButton" onclick="exportSubmissionJSON()" style="color: red; background-color: rgba(0,0,0,0); border: none;">Download Submission</button><a id="downloadFileLink" style="color: green; background-color: rgba(0,0,0,0); text-decoration: none; border: none; display: none;"></a></small><br>
         </p>
+        <a href="/" style="all: unset; color: #2997FF">Back</a>
     </form>
     <input type="file" name="jsonScoutFile" accept=".scout" style="display: none;" id="jsonScoutFile" disabled="disabled">
     <br><br>
