optimize page loads

--- a/src/main.html
+++ b/src/main.html
@@ -13,7 +13,7 @@
     <meta name="apple-mobile-web-app-title" content="Scouting">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#121212" id="themeMeta">
-    <link rel="stylesheet" href="2023_float.css" type="text/css">
+    <link rel="stylesheet" href="float.css" type="text/css">
     <link rel="manifest" href="/app.webmanifest"/>
     <link rel="apple-touch-startup-image" href="public/launch.png">
     <script src="form.min.js"></script>
@@ -91,6 +91,7 @@
             <!--INPUT TO SET FOR GRID DATA-->
             <input value="000000000000000000000000000" type="number" name="game12" id="griddata" hidden>
             <div class="sg">
+                <!--Grid row 1-->
                 <div class="sg-c" data-coop="false" data-num="0" id="sgc_1_1" data-state="0"></div>
                 <div class="sg-c" data-coop="false" data-num="1" id="sgc_1_2" data-state="0"></div>
                 <div class="sg-c" data-coop="false" data-num="2" id="sgc_1_3" data-state="0"></div>
@@ -100,7 +101,7 @@
                 <div class="sg-c" data-coop="false" data-num="6" id="sgc_1_7" data-state="0"></div>
                 <div class="sg-c" data-coop="false" data-num="7" id="sgc_1_8" data-state="0"></div>
                 <div class="sg-c" data-coop="false" data-num="8" id="sgc_1_9" data-state="0"></div>
-
+                <!--Grid row 2-->
                 <div class="sg-c" data-coop="false" data-num="9" id="sgc_2_1" data-state="0"></div>
                 <div class="sg-c" data-coop="false" data-num="10" id="sgc_2_2" data-state="0"></div>
                 <div class="sg-c" data-coop="false" data-num="11" id="sgc_2_3" data-state="0"></div>
@@ -110,7 +111,7 @@
                 <div class="sg-c" data-coop="false" data-num="15" id="sgc_2_7" data-state="0"></div>
                 <div class="sg-c" data-coop="false" data-num="16" id="sgc_2_8" data-state="0"></div>
                 <div class="sg-c" data-coop="false" data-num="17" id="sgc_2_9" data-state="0"></div>
-
+                <!--Grid row 3-->
                 <div class="sg-c" data-coop="false" data-num="18" id="sgc_3_1" data-state="0"></div>
                 <div class="sg-c" data-coop="false" data-num="19" id="sgc_3_2" data-state="0"></div>
                 <div class="sg-c" data-coop="false" data-num="20" id="sgc_3_3" data-state="0"></div>
