--- a/src/denied.html
+++ b/src/denied.html
@@ -7,14 +7,9 @@
     <meta name="language" content="English">
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
-    <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="Scouting">
-    <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#121212" id="themeMeta">
-    <link rel="stylesheet" href="2023_float.min.css" type="text/css">
-    <link rel="manifest" href="/app.webmanifest"/>
-    <link rel="apple-touch-startup-image" href="public/launch.png">
+    <link rel="stylesheet" href="float.min.css" type="text/css">
     <style>
         body {
             vertical-align: middle;
