submission ul/dl not actually stable

--- a/src/main.html
+++ b/src/main.html
@@ -186,8 +186,8 @@
         <p style="text-align:center">
             <button type="submit" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem;; border-style: solid; border-color: #68C3E2; border-width: 0.875rem;; margin-top: 1rem;">Submit</button><br>
             <button type="button" style="color: #fff; background-color: #E90202; border-radius: 0.5rem;; border-style: solid; border-color: #E90202; border-width: 0.875rem;; margin-top: 1rem;" onclick="goToHome()">Back</button><br><br>
-            <small><button type="button" id="downloadFormButton" onclick="exportSubmissionJSON()" style="color: red; background-color: rgba(0,0,0,0); border: none;">Download Submission</button><a id="downloadFileLink" style="color: green; background-color: rgba(0,0,0,0); text-decoration: none; border: none; display: none;"></a></small><br></small>
-            <small><button type="button" id="uploadFormButton" onclick="uploadSubmissionJSON()" style="color: red; background-color: rgba(0,0,0,0); border: none;">Upload Submission</button></small>
+            <!--<small><button type="button" id="downloadFormButton" onclick="exportSubmissionJSON()" style="color: red; background-color: rgba(0,0,0,0); border: none;">Download Submission</button><a id="downloadFileLink" style="color: green; background-color: rgba(0,0,0,0); text-decoration: none; border: none; display: none;"></a></small><br></small>
+            <small><button type="button" id="uploadFormButton" onclick="uploadSubmissionJSON()" style="color: red; background-color: rgba(0,0,0,0); border: none;">Upload Submission</button></small>-->
         </p>
     </form>
     <input type="file" name="jsonScoutFile" accept=".scout" style="display: none;" id="jsonScoutFile" disabled="disabled">
