create new browse page
rename old one to "detail"

--- a/src/main.html
+++ b/src/main.html
@@ -86,10 +86,11 @@
         </fieldset><br>
         <h2 class="gameflair1">Match Scouting</h2>
         <p id="landscapeReminder" style="display: none; color: red;">Consider turning your device for the grid</p>
-        <p>Select only grid squares that the robot you are scouting fills</p>
+        <p>Select only grid squares that the robot you are scouting fills.</p>
         <fieldset>
             <!--INPUT TO SET FOR GRID DATA-->
             <input value="000000000000000000000000000" type="number" name="game12" id="griddata" hidden>
+            <p><strong>Top of grid</strong></p>
             <div class="sg">
                 <!--Grid row 1-->
                 <div class="sg-c" data-coop="false" data-num="0" id="sgc_1_1" data-state="0"></div>
@@ -122,6 +123,7 @@
                 <div class="sg-c" data-coop="false" data-num="25" id="sgc_3_8" data-state="0"></div>
                 <div class="sg-c" data-coop="false" data-num="26" id="sgc_3_9" data-state="0"></div>
             </div>
+            <p><strong>Bottom of grid</strong></p>
         </fieldset>
         <br><label><strong id="vstrong">During AUTO, the robot...</strong></label>
         <fieldset><br>
