--- a/src/pit.html
+++ b/src/pit.html
@@ -88,15 +88,15 @@
 
                 <fieldset>
                     <label>Images</label><br>
-                    <label>Image 1</label>
+                    <label>Image 1 - <strong>FRONT</strong></label>
                     <input type="file" name="image1" accept="image/png, image/jpeg" required><br>
-                    <label>Image 2</label>
+                    <label>Image 2 - <strong>BACK</strong></label>
                     <input type="file" name="image2" accept="image/png, image/jpeg" required><br>
-                    <label>Image 3</label>
+                    <label>Image 3 - <strong>SIDE</strong></label>
                     <input type="file" name="image3" accept="image/png, image/jpeg" required><br>
-                    <label>Image 4</label>
+                    <label>Image 4 - <strong>BOTTOM</strong></label>
                     <input type="file" name="image4" accept="image/png, image/jpeg" required><br>
-                    <label>Image 5</label>
+                    <label>Image 5 - <strong>SOMETHING ELSE</strong></label>
                     <input type="file" name="image5" accept="image/png, image/jpeg" required>
                 </fieldset>
 
