--- a/src/settings.html
+++ b/src/settings.html
@@ -31,6 +31,13 @@
             <button style="background-color: rgba(0,0,0,0); border: 2px solid gray; color: gray; border-radius: 10px; padding: 5px; font-weight: 700; width: 75%;" onclick="changeTheme()">
                 <p>Switch Theme</p>
             </button><br><br>
+            <button style="background-color: rgba(0,0,0,0); border: 2px solid gray; color: gray; border-radius: 10px; padding: 5px; font-weight: 700; width: 75%;" onclick="window.location.href='clearCookies'">
+                <p>Reload Roles</p>
+            </button><br><br>
+            <button style="background-color: rgba(0,0,0,0); border: 2px solid gray; color: gray; border-radius: 10px; padding: 5px; font-weight: 700; width: 75%;" onclick="window.location.href='/'">
+                <p>Back</p>
+            </button><br>
+            <p>DEBUG</p>
             <button style="background-color: rgba(0,0,0,0); border: 2px solid #f00; color: #f00; border-radius: 10px; padding: 5px; font-weight: 700; width: 75%;" onclick="updateSW()">
                 <p>Update SW</p>
             </button><br><br>
@@ -40,9 +47,6 @@
             <button style="background-color: rgba(0,0,0,0); border: 2px solid #f00; color: #f00; border-radius: 10px; padding: 5px; font-weight: 700; width: 75%;" onclick="window.location.href='logout'">
                 <p>Log Out</p>
             </button><br><br>
-            <button style="background-color: rgba(0,0,0,0); border: 2px solid gray; color: gray; border-radius: 10px; padding: 5px; font-weight: 700; width: 75%;" onclick="window.location.href='/'">
-                <p>Back</p>
-            </button>
         </div>
     </div>
     <script>
