--- a/src/matches.html
+++ b/src/matches.html
@@ -32,6 +32,7 @@
 <body id="body" class="dark-mode">
     <script>themeHandle()</script>
     <div class="container" id="search" style="display: flex;">
+        <div class="maincontent">
             <h1 style="font-family: 'raleway-300'">2023 Matches<br><span class="gametitle">CHARGED UP℠</span></h1><br><br>
             <fieldset>
                 <label>Event Code: </label><br>
@@ -42,6 +43,7 @@
                 <button type="button" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem;; border-style: solid; border-color: #68C3E2; border-width: 0.875rem;; margin-top: 1rem;" id="viewMatchButton" onclick="getMatches()">View</button><br>
                 <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem;; border-style: solid; border-color: #FFB600; border-width: 0.875rem;; margin-top: 1rem;" onclick="goToHome()" type="button">Back</button>
             </fieldset>
+        </div>
         <br><br>
     </div>
     <div class="container" id="results" style="display: none;"> <!--flex is shown-->
@@ -59,7 +61,7 @@
         }
         function getMatches() {
             eventCode = document.getElementById("eventCode").value
-            document.getElementById("viewMatchButton").innerHTML = "Preparing Request...";
+            document.getElementById("viewMatchButton").innerHTML = "Getting Data...";
             const xhr = new XMLHttpRequest();
             xhr.open("GET", `/api/matches/2023/${eventCode}/qual`, true);
             xhr.withCredentials = true;
@@ -67,6 +69,7 @@
             xhr.onreadystatechange = () => {
             if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
                 console.log("done")
+                console.log(xhr.responseText)
                 document.getElementById("viewMatchButton").innerHTML = "Loaded!";
                 document.getElementById("matchHeader").insertAdjacentHTML("afterend", xhr.responseText)
                 document.getElementById("search").style.display = "none";
